--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [
     "ember-addon"
   ],
-  "repository": "",
+  "repository": "github:lblod/ember-vo-tasklist",
   "license": "MIT",
   "author": "",
   "directories": {
